# stella

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile.in  README.md  configure
src/: CMakeLists.txt  Daemon.cc  Dispatcher.cc  Dispatcher.h  FUtils.cc  FUtils.h  JSONFileModel.cc  JSONFileModel.h  KeyHook.cc  KeyHook.h  MapModel.cc  MapModel.h  ModularDataModel.cc  ModularDataModel.h  PipeReader.cc  PipeReader.h  RobotCommon.cc  RobotCommon.h  ShortcutDefinition.cc  ShortcutDefinition.h  StellaControl.cc  StellaControl.h  VirtualTyperInterface.h
src/protoc/: command.pb.cc  command.pb.h  command.proto  command_pb2.py
tests/: CMakeLists.txt  testjsonfilemodel.cc  testmapmodel.cc
